# education-pdf-merger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.4.0.md  base_excel_transfer.py  build.bat  build_exe.spec  build_installer.spec  config.json  config.json.example  config_loader.py  config_validator.py  constants.py  convert_and_merge.py  document_collector.py  exceptions.py  folder_structure_detector.py  ghostscript_detector.py  ghostscript_utils.py  google_auth_manager.py  google_sheets_reader.py  google_sheets_transfer.py  logging_config.py  mypy.ini  path_validator.py  pdf_converter.py  pdf_merge_orchestrator.py  pdf_processor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.py  transfer_factory.py  update_excel_files.py  (+2 more)
.claude/: claude.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
converters/: __init__.py  ichitaro_converter.py  image_converter.py  office_converter.py
docs/: GOOGLE_SHEETS_SETUP.md
gui/: __init__.py  app.py  ichitaro_dialog.py  plan_type_selection_dialog.py  setup_wizard.py  styles.py  ui_constants.py  utils.py
gui/tabs/: __init__.py  base_tab.py  excel_tab.py  file_tab.py  pdf_tab.py  settings_tab.py
installer/: README.md  README_INSTALLER.md  build_installer.bat  config_template.json  post_install.py  post_install.spec  setup.iss
tests/: conftest.py  test_config_loader.py  test_document_collector.py  test_exceptions.py  test_folder_structure_detector.py  test_ichitaro_converter.py  test_image_converter.py  test_integration.py  test_office_converter.py  test_pdf_converter.py  test_pdf_merge_orchestrator.py  test_pdf_processor_ops.py  test_update_excel_files.py
